2017-11-29  Sam Steingold  <sds@gnu.org>

	* amigasock.lisp: Remove the last vestige of Amiga support.

2017-11-29  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-doc): Also test sys::ensure-clhs-map.

2017-11-29  Sam Steingold  <sds@gnu.org>

	An attempt to fix bug#719: get libunistring-optional from gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported
	build-prerequisites".
	* Makefile.devel (GNULIB_CORE): Add libunistring-optional.
	* configure.in: call gl_LIBUNISTRING_OPTIONAL.
	* gllib/*, glm4/*: Update from gnulib.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-11-28  Sam Steingold  <sds@gnu.org>

	DEF-CALL-OUT now accepts the :GUARD argument.
	* foreign1.lisp (finalize-coutput-file): 4th element in function
	record in *function-list* is its guard.
	(def-call-out): Accept :guard, defaulting to *foreign-guard*, pass
	it to ...
	(note-c-fun): Save guard to *function-list*.
	* modules/bindings/glibc/linux.lisp (canonicalize_file_name)
	(euidaccess, get_current_dir_name, group_member, fcloseall):
	Uncomment and guard with "defined(__USE_GNU)".

2017-11-27  Bruno Haible  <bruno@clisp.org>

	ari_asm for mips: Don't use a global variable as return value.
	* ari_asm_mips.d (asm_mulu32_): Accept a pointer argument for where to
	store the high part of the result.
	* ari_asm_mips64.d (asm_mulu32_): Likewise.
	* arilev0.d (mulu32_) [MIPS]: Pass a pointer to asm_mulu32_.

2017-11-27  Bruno Haible  <bruno@clisp.org>

	ari_asm for i386: Don't use a global variable as return value.
	* ari_asm_i386.d (asm_mulu32_64): Renamed from asm_mulu32_. Don't
	access mulu32_high.
	(asm_divu_6432_3232_): Don't access divu_32_rest.
	* arilev0.d (mulu32, mulu32_, divu_6432_3232_) [I80386]: Get a 64-bit
	result from the registers.
	* ari_asm_i386.msvc.c: Regenerated.

2017-11-26  Bruno Haible  <bruno@clisp.org>

	ari_asm for HPPA: Don't use a global variable as return value.
	* ari_asm_hppa.d (asm_mulu32_64): Renamed from asm_mulu32_. Don't