@@ -1,6 +1,9 @@
-;; deprecated CLISP functionality
-;; present for now, will be removed later
-;; Sam Steingold 2001, 2007, 2009
+;;; deprecated CLISP functionality
+;;; present for now, will be removed later
+;;; (except for CLHS and CLtL2 names which will be kept forever because
+;;; of the old unmaintained packages we want to keep working).
+;;;
+;;; Sam Steingold 2001, 2007, 2009, 2017
 
 ;; the standard way to deprecate a function is to define a
 ;; compiler-macro for it which will issue a warning
@@ -13,19 +16,6 @@
   (push (list symbol "Use ~S instead." superseded)
         system::*deprecated-functions-alist*)
   symbol)
-
-;; ---------------------------------------------------------
-;; `type-expand-1' -- superseded by (type-expand typespec t)
-
-(deprecate 'ext::type-expand-1 'ext::type-expand
-           (lambda (typespec) (ext::type-expand typespec t)))
-#+compiler
-(define-compiler-macro type-expand-1 (typespec)
-  (let ((ret `(type-expand ,typespec t)))
-    (c-style-warn "~S is deprecated and will be removed in a future release.
-Use ~S instead."
-                  'type-expand-1 ret)
-    ret))
 
 ;; ------------------------------------------------
 ;; http://www.lisp.org/HyperSpec/Issues/iss321.html
@@ -40,18 +30,3 @@ Use ~S instead."
 
 (deprecate 'ext::get-setf-method-multiple-value 'get-setf-expansion)
 (deprecate 'ext::define-setf-method 'define-setf-expander)
-
-;; ------------------------------------------------------
-
-#+ffi
-(progn
-  (deprecate 'ffi::foreign-address-null 'null)
-  (setf (cdr (assoc 'ffi::foreign-address-null system::*deprecated-functions-alist*))
-        (list "The FFI now returns C NULL pointers as Lisp NIL. Use the function ~S instead." 'null)))
-
-;; ------------------------------------------------------
-;; for consistency with EXT:PROBE-DIRECTORY
-;;     EXT:DEFAULT-DIRECTORY CL:PATHNAME-DIRECTORY
-(deprecate 'ext::delete-dir 'delete-directory)
-(deprecate 'ext::make-dir 'make-directory)
-(deprecate 'ext::rename-dir 'rename-directory)
