@@ -1,5 +1,13 @@
 2017-11-29  Sam Steingold  <sds@gnu.org>
 
+	Remove old deprecated features.
+	(5+ years after the first release in which it became deprecated)
+	* modules/syscalls/posix.lisp (socket-service-port): Remove.
+	* deprecated.lisp (type-expand-1, foreign-address-null)
+	(delete-dir, make-dir, rename-dir): Remove.
+
+2017-11-29  Sam Steingold  <sds@gnu.org>
+
 	* amigasock.lisp: Remove the last vestige of Amiga support.
 
 2017-11-29  Sam Steingold  <sds@gnu.org>
